crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_xlink__remove_xlink-2.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_xlink.rs
expression: "test_config(r#\"{ \"removeXlink\": {} }\"#,\nSome(r##\"<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:uwu=\"http://www.w3.org/1999/xlink\" viewBox=\"0 0 348.61 100\">\n  <!-- convert xlink aliased as uwu -->\n  <defs>\n    <linearGradient id=\"a\" x1=\"263.36\" y1=\"14.74\" x2=\"333.47\" y2=\"84.85\" gradientUnits=\"userSpaceOnUse\">\n      <stop offset=\"0\" stop-color=\"#45afe4\"/>\n      <stop offset=\"1\" stop-color=\"#364f9e\"/>\n    </linearGradient>\n    <linearGradient id=\"b\" x1=\"262.64\" y1=\"15.46\" x2=\"332.75\" y2=\"85.57\" uwu:href=\"#a\"/>\n  </defs>\n</svg>\"##),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 348.61 100">
    <!-- convert xlink aliased as uwu -->
    <defs>
        <linearGradient id="a" x1="263.36" y1="14.74" x2="333.47" y2="84.85" gradientUnits="userSpaceOnUse">
            <stop offset="0" stop-color="#45afe4"/>
            <stop offset="1" stop-color="#364f9e"/>
        </linearGradient>
        <linearGradient id="b" x1="262.64" y1="15.46" x2="332.75" y2="85.57" href="#a"/>
    </defs>
</svg>
